# SrkOS

./: .gitignore  Cargo.toml  PRD.md  architecture-specs.md  rust-toolchain.toml  technical.md
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: run.sh
src/: hardware.rs  ipc.rs  lib.rs  main.rs
src/tasks/: audio.rs  button.rs  camera.rs  espnow.rs  http.rs  mod.rs  oled.rs
ui/: index.html
