[package]
name = "srkos"
version = "0.1.0"
edition = "2021"
authors = ["SrkOS Contributors"]
description = "Memory-safe bare-metal async OS for ESP32 (520 KB SRAM, 4 MB Flash)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/franruedaesq/SrkOS"

# The firmware binary is only compiled when the `firmware` feature is active.
# This allows `cargo test` to run entirely on the host without the Xtensa toolchain.
[[bin]]
name = "srkos"
path = "src/main.rs"
required-features = ["firmware"]

# ---- Feature flags ----------------------------------------------------------
[features]
default = []

# Activates all hardware-abstraction and display helpers needed to compile
# src/main.rs for xtensa-esp32-none-elf.  Run the firmware with:
#   cargo run-fw                 (build + flash image + QEMU)
#   cargo build-fw               (build only)
# or the long forms:
#   cargo run   --target xtensa-esp32-none-elf --features firmware --release
#   cargo build --target xtensa-esp32-none-elf --features firmware --release
firmware = [
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:ssd1306",
    "dep:static_cell",
    "dep:embedded-graphics",
    "dep:esp-hal-embassy",
]

# ---- Host-testable dependencies (no_std, no_alloc) -------------------------
[dependencies]
# Async IPC channels -- zero-allocation, lock-free, no_std
embassy-sync      = { version = "0.7", default-features = false }
# Fixed-size collections that never heap-allocate
heapless          = { version = "0.8", default-features = false, features = ["serde"] }
# Portable critical-section abstraction (impl chosen per-platform)
critical-section  = { version = "1.1", default-features = false }
# Embedded-HAL async abstraction used by the I2C hardware prober
embedded-hal-async = { version = "1.0", default-features = false }
# Serialization: no_std JSON for the REST API
serde             = { version = "1", default-features = false, features = ["derive"] }
serde-json-core   = { version = "0.6", default-features = false }

# ---- Firmware-only optional dependencies ------------------------------------
# These are optional and only enabled via the `firmware` feature.
# IMPORTANT – version alignment: embassy-time uses `links = "embassy-time-driver"`
# which prevents two incompatible versions from coexisting in the same link unit.
# esp-hal-embassy 0.9.x transitively requires embassy-executor 0.7 and
# embassy-time 0.4, so our direct optional deps must match those same minor
# versions to avoid a resolution conflict.  See the version note in the
# [target.'cfg(target_arch = "xtensa")'.dependencies] section below.
embassy-executor  = { version = "0.7",   default-features = false, optional = true }
embassy-time      = { version = "0.4",   default-features = false, optional = true }
ssd1306           = { version = "0.10",  default-features = false, optional = true }
static_cell       = { version = "2",     default-features = false, optional = true }
embedded-graphics = { version = "0.8",   default-features = false, optional = true }
# Embassy support for the ESP32 HAL — provides the `#[esp_hal_embassy::main]`
# macro, the embassy executor, and the embassy-time driver for Xtensa.
# Kept in [dependencies] (not target-specific) so it can be referenced by the
# `firmware` feature flag above.
esp-hal-embassy   = { version = "0.9",   default-features = false, features = ["esp32", "executors"], optional = true }

# ---- ESP32 HAL (Xtensa target only) -----------------------------------------
# esp-hal and its companion crates are placed in a cfg-gated section so that
# the host (x86_64) dependency resolver never encounters them.
# This avoids version conflicts between the platform-specific pre-release
# crates and the host-side embassy-sync 0.7 dependency.
#
# Version note: esp-hal-embassy 0.9.x requires the `__esp_hal_embassy` internal
# feature of esp-hal which exists in 1.0.0-rc.0/rc.1 but was removed from the
# stable 1.0.0 release.  Using `version = "1.0.0-rc.0"` ensures Cargo selects a
# compatible pre-release and avoids that mismatch.
#
# Install the Xtensa Rust toolchain with:  cargo install espup && espup install
[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-hal       = { version = "1.0.0-rc.0", features = ["esp32"] }
esp-backtrace = { version = "0.18",  features = ["esp32", "panic-handler", "println"] }
esp-println   = { version = "0.16",  features = ["esp32"] }

# ---- Dev dependencies (host tests only) ------------------------------------
[dev-dependencies]
# Provide a std-backed critical-section so the host test binary can link the
# CriticalSectionRawMutex used by the global COMMAND_BUS static.
critical-section = { version = "1.1", features = ["std"] }
# Minimal async executor: provides `futures::executor::block_on` for tests
futures          = { version = "0.3", features = ["executor"] }

# ---- Build profiles ---------------------------------------------------------
[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level     = "s"
lto           = "fat"
codegen-units = 1
debug         = false
